@@ -1,8 +1,11 @@
-2016.07.22: [SOLVE] pywin32 module cannot be complied.
+2016.07.23: time sync only work with some trick (add import synctime in system_tools.pyw)
+2016.07.23: Turnoff screen only work with 1.5 seconds delay
+2016.07.22: [SOLVED] should only ask for admin right when sync time
+2016.07.22: [SOLVED] pywin32 module cannot be complied
 2016.07.21: Progress bar now can't work
 2016.07.21: Should add global shortcuts
 2016.07.21: Should refresh app buttons after adding apps
-2016.07.21: Should add button to turn off the screen
+2016.07.21: [SOLVED] Should add button to turn off the screen
 2016.07.21: Should detect power plan and change combobox value
 2016.07.20: [SOLVED] Should check if this app is running when start
 2016.01.06: [SOLVED] Don't know how to ask AUC permission
