@@ -5,4 +5,5 @@ shutdown_time = 11
 key1 = D:/windows_apps/Start.exe
 key3 = D:/windows_apps/PortableApps/unikey42RC4-140823-win64/UniKeyNT.exe
 key2 = D:/windows_apps/just_run_apps/Steam/Steam.exe
+key4 = D:/windows_apps/PortableApps/GitPortable/GitGUIPortable.exe
 
