@@ -1,3 +1,6 @@
+20160723:	add turnoff screen button
+		only ask for admin right when needed
+		sync time now trigger by a button with a little trick
 20160722:	icon folder and config.ini now are auto copied by setup.py file
 		pywin32 can be complied by changing setup.py file (bundle = 1 to 3)
 		improve setup.py code
